<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_1"/>

        <Button
            android:id="@+id/btnDialog1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_1_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_2"/>

        <Button
            android:id="@+id/btnDialog2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_2_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_3"/>

        <Button
            android:id="@+id/btnDialog3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_3_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_4"/>

        <Button
            android:id="@+id/btnDialog4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_4_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_5"/>

        <Button
            android:id="@+id/btnDialog5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_5_button"/>

    </LinearLayout>
</LinearLayout>